--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.cinemachine": "2.9.7",
+    "com.unity.textmeshpro": "3.0.9",
     "com.unity.visualscripting": "1.9.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
